Briefly list any changes you made to your graph class during hw-marvel, and why you made those changes.
