@@ -1,0 +1,27 @@
+# Creates an empty graph, adds 3 nodes to it,
+# and adds different edges to the same node,
+# then checks the children
+
+# Create a graph
+created graph graph
+
+# Add a node to graph
+added node node1 to graph
+
+# Add another node to graph
+added node node2 to graph
+
+# Add a third node to graph
+added node node3 to graph
+
+# Add an edge from node1 to node2 in graph
+added edge edge1 from node1 to node2 in graph
+
+# Add another edge from node1 to node2 in graph
+added edge edge2 from node1 to node2 in graph
+
+# Add edge1 from node1 to node3 in graph
+added edge edge1 from node1 to node3 in graph
+
+# List the children of the parent node
+the children of node1 in graph are: node2(edge1) node2(edge2) node3(edge1)
